--- a/acts/index.html
+++ b/acts/index.html
@@ -197,7 +197,10 @@
                                 
                                 <li><a href="https://librosa.org/" target="_blank">librosa</a>: audio and music processing in Python</li>
 
-                                <li>Interpretability of encoder–decoder bases from <a href="22-23/#M" target="_blank">Dr. Yu's Dec 26, '23 talk</a></li>
+                                <li>
+                                    Interpretability of encoder–decoder bases from <a href="22-23/#M" target="_blank">Dr. Yu's Dec 26, '23 talk</a> on 
+                                    generative models for speech processing
+                                </li>
                             </ol>                                
                         </li>                        
                     </ul>
