--- a/acts/index.html
+++ b/acts/index.html
@@ -176,34 +176,34 @@
                 <li>How are the above two aspects related?</li>
 
                 <li>
-                    <a href="24/Feng-20240119.pdf" target="_blank">Report on [Feng et al.]</a> and what's next?  
-                    <ul>
-                        <li>This research drew inspiration from Carlsson and his collaborators' discovery of the Klein-bottle distribution of 
-                            high-contrast, local patches of natural images [Carlsson et al. 2008], as well as their subsequent recent work on 
-                            topological CNNs for learning image and even video data [Love et al. 2023].  By analogy, we aim to understand a 
-                            distribution space for speech data, even a directed graph structure on it modeling the complex network of 
-                            speech-signal sequences for practical purposes such as <a href="https://en.wikipedia.org/wiki/Speaker_diarisation" 
-                            target="_blank">speaker diarisation</a>, and how these topological inputs may enable smarter learning.  
-                        </li>
+                    <p><a href="24/Feng-20240119.pdf" target="_blank">Report on [Feng et al.]</a> and what's next?</p>
+                    
+                    <p>
+                        This research drew inspiration from Carlsson and his collaborators' discovery of the Klein-bottle distribution of 
+                        high-contrast, local patches of natural images [Carlsson et al. 2008], as well as their subsequent recent work on 
+                        topological CNNs for learning image and even video data [Love et al. 2023].  By analogy, we aim to understand a 
+                        distribution space for speech data, even a directed graph structure on it modeling the complex network of 
+                        speech-signal sequences for practical purposes such as <a href="https://en.wikipedia.org/wiki/Speaker_diarisation" 
+                        target="_blank">speaker diarisation</a>, and how these topological inputs may enable smarter learning.  
+                    </p>
 
-                        <li>
-                            Other suggestions?  
-                            <ol>
-                                <li>Comparative non-topological machine learning experiment, input spectrograms instead of PD/MP: Done.</li>
+                    <p>
+                        Other suggestions?  
+                        <ol>
+                            <li>Comparative non-topological machine learning experiment, input spectrograms instead of PD/MP: Done.</li>
 
-                                <li>How do weight vectors distribute in a CNN trained from the above item?</li>
+                            <li>How do weight vectors distribute in a CNN trained from the above item?</li>
 
-                                <li>Sequence: Attention mechanism</li>
+                            <li>Sequence: Attention mechanism</li>
                                 
-                                <li><a href="https://librosa.org/" target="_blank">librosa</a>: audio and music processing in Python</li>
+                            <li><a href="https://librosa.org/" target="_blank">librosa</a>: audio and music processing in Python</li>
 
-                                <li>
-                                    Interpretability of encoder–decoder bases from <a href="22-23/#M" target="_blank">Dr. Yu's Dec 26, '23 talk</a> on 
-                                    generative models for speech processing
-                                </li>
-                            </ol>                                
-                        </li>                        
-                    </ul>
+                            <li>
+                                Interpretability of encoder–decoder bases from <a href="22-23/#M" target="_blank">Dr. Yu's Dec 26, '23 talk</a> on 
+                                generative models for speech processing
+                            </li>
+                        </ol>
+                    </p>
                 </li>
 
                 <li>Derivation of the Klein-filter formulas in [Love et al. 2023]</li>
