--- a/acts/index.html
+++ b/acts/index.html
@@ -190,7 +190,7 @@
                     <p>
                         Other suggestions?  
                         <ol>
-                            <li>Comparative non-topological machine learning experiment, input spectrograms instead of PD/MP: Done.</li>
+                            <li>Comparative non-topological machine learning experiment, input spectrograms instead of PD/MP: Done on Jan 25 and improved on Feb 22.</li>
 
                             <li>How do weight vectors distribute in a CNN trained from the above item?</li>
 
