--- a/grad/index.html
+++ b/grad/index.html
@@ -160,6 +160,19 @@
     </p>
 
 
+<h3>Talks in Spring 2024 (Tuesdays 4:20 in M5024)</h3>
+
+    <p>
+        Mar 5, '23, 
+        <b>Qingrui Qu</b>, 
+        <a onclick="toggle_visibility('13');">
+        <i>TBA</i></a><br />
+        <div id="13" class="toshow" style="display:none">
+            
+        </div>
+    </p>
+
+
 <h3>Talks in Fall 2023 (Tuesdays 4:20 in M4009)</h3>
 
     <p>
