--- a/undergrad/23fal/index.html
+++ b/undergrad/23fal/index.html
@@ -171,6 +171,23 @@
     </p>
 
     <p>
+        Oct 12, '23 (Colloquium, 4:30–5:30 pm, M1001), 
+        <b>Don Zagier</b> (Max Planck Institute for Mathematics), 
+        <a onclick="toggle_visibility('23-5');"><i>Modular forms and quantum modular forms</i></a><br />
+        <div id="23-5" class="toshow" style="display:none">
+            Modular forms are one of the most beautiful and fundamental notions in modern number theory and 
+            play a role in almost every domain of pure mathematics and physics.  The famous specialist 
+            Martin Eichler once said, "There are five fundamental operations of mathematics: 
+            addition, subtraction, multiplication, division, and modular forms."  
+            In the first talk I will explain this notion and present some highlights of the theory and its applications.  
+            The last part, about the relatively new notion of "quantum modular forms" and its variants, is based on 
+            joint work with Stavros Garoufalidis (SUSTech) during the last several years in which 
+            many beautiful interconnections between number theory and 3-dimensional topology, and in particular the 
+            so-called quantum invariants of 3-dimensional topology, were found.
+        </div>
+    </p>    
+        
+    <p>
         Oct 19, '23,     
         <b>Zian Zhao</b>, 
         <a href="10_19_Zhao.pdf" target="_blank"    
@@ -182,6 +199,23 @@
         Nov 2, '23,     
         <b>Jinghua Xi</b>, 
         <i>Modular Jacobians and Hecke operators</i>
+    </p>
+
+    <p>
+        Nov 2, '23 (Colloquium, 4:30–5:30 pm, M1001), 
+        <b>Ruochuan Liu</b> (Peking University), 
+        <a onclick="toggle_visibility('23-6');"><i>Congruences between modular forms and geometry of the eigencurve</i></a><br />
+        <div id="23-6" class="toshow" style="display:none">
+            The study of congruences between modular forms is a classic and vital subject in number theory.  
+            Hida was the first to establish the theory of $p$-adic modular forms with slope zero; Hida theory 
+            is a core tool in Wiles' proof of the Iwasawa main conjecture, and also one of the main tools in 
+            proving Fermat's Last Theorem.  Coleman extended Hida's theory to $p$-adic modular forms of 
+            general finite slopes and, together with Mazur, constructed the eigencurve.  The geometry of the 
+            eigencurve is essential for understanding the congruence properties of modular forms, yet our 
+            knowledge about geometry of the eigencurve is very limited.  In a recent joint work with Nha Xuan 
+            Truong, Xiao Liang and Zhao Bin, we prove the finiteness of irreducible components of the 
+            eigencurve under a generic condition.
+        </div>
     </p>
 
     <p>
@@ -221,9 +255,15 @@
     </p>
 
     <p>
-        Dec 21, '23,     
-        <b>No Seminar</b>
-    </p>
+        Dec 21, '23 (Science Lecture, 4:30–5:30 pm, CS1142), 
+        <b>Ruochuan Liu</b> (Peking University), 
+        <a onclick="toggle_visibility('23');"><i>An introduction to elliptic curves and modular forms</i></a><br />
+        <div id="23" class="toshow" style="display:none">
+            In this lecture, I will introduce modular forms and elliptic curves, two important notions from number theory, as well as their close relationship.  
+            In particular, I will explain how they played a key role in the proof of Fermat's Last Theorem.  
+            Moreover, I will discuss applications of modular forms and elliptic curves to other disciplines, such as cryptography and quantum computing.
+        </div>
+    </p>    
 
     <p>
         Dec 28, '23,     
