--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -15,14 +15,14 @@
 
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" href="../css/vendor.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/vendor.css">
+    <link rel="stylesheet" href="/css/main.css">
 
     <!-- script
     ================================================== -->
-    <script src="../js/modernizr.js"></script>
-    <script src="../js/pace.min.js"></script>
+    <script src="/js/modernizr.js"></script>
+    <script src="/js/pace.min.js"></script>
 <script type="text/javascript">
 //<!--
     function toggle_visibility(id) {
@@ -146,6 +146,9 @@
 
     <p>
         This is an undergraduate student seminar on geometry and topology.  
+        The tentative plan for this semester is that we take a break, 
+        but check out the <a href="/acts" title="" target="_blank">Applied and Computational Topology Seminar</a> if you are interested.  
+        If you would like to propose a topic for now or the future, write to <a href="mailto:zhuyf@sustech.edu.cn">Yifei Zhu</a>.  
         <!--
         This semester, our main theme will be modular curves, with Diamond and Shurman's <a href="https://doi.org/10.1007/978-0-387-27226-9" target="_blank">A first course in modular forms</a> (from Chapter 6 on) as a main reference.  
         Other useful resources include Milne's <a href="https://www.jmilne.org/math/CourseNotes/mf.html" target="_blank">notes</a> as well as a recent introductory, motivating 
@@ -240,9 +243,9 @@
 
     <!-- Java Script
     ================================================== -->
-    <script src="../js/jquery-3.2.1.min.js"></script>
-    <script src="../js/plugins.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="/js/jquery-3.2.1.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/main.js"></script>
 
 </body>
 
