--- a/acts/index.html
+++ b/acts/index.html
@@ -168,7 +168,7 @@
         <div id="24-1" class="toshow" style="display:none">
             <ul>
                 <li>Topology of Neural Network architectures: Feedforward NN $\to$ Recurrent NN $\to$ Reservoir Computing ($\to$ Time-Delayed RC) $\to$ 
-                    engineering implementation (photonic circuits?) ...</li>
+                    engineering implementation (photonic circuits?) ... CLDNN?</li>
 
                 <li><a href="24/Zhang-20240119.pdf" target="_blank">Topological inputs for designing NNs</a>: Convolutional NN $\to$ Topological CNN, 
                     in the sense of Carlsson et al. (from [Carlsson et al. 2008] to [Love et al. 2023])</li>
@@ -223,6 +223,8 @@
 <li>Xing-Yue Duan, Xiong Ying, Si-Yang Leng, Jürgen Kurths, Wei Lin, and Huan-Fei Ma, <a href="https://journals.aps.org/prresearch/abstract/10.1103/PhysRevResearch.5.L022041" target="_blank">Embedding theory of reservoir computing and reducing reservoir network using time delays</a></li>
 
 <li>Yichen Shen, Nicholas C. Harris, Scott Skirlo et al., <a href="https://www.nature.com/articles/nphoton.2017.93" target="_blank">Deep learning with coherent nanophotonic circuits</a></li>
+
+<li>T. N. Sainath, O. Vinyals, A. Senior and H. Sak, <a href="https://ieeexplore.ieee.org/document/7178838" target="_blank">Convolutional, long short-term memory, fully connected deep neural networks</a></li>
 
 <li>Laura Alessandretti, Andrea Baronchelli, and Yang-Hui He, <a href="https://www.worldscientific.com/doi/10.1142/9781800613706_0001" target="_blank">Machine learning meets number theory: The data science of Birch–Swinnerton-Dyer</a></li>
 
