--- a/acts/index.html
+++ b/acts/index.html
@@ -151,8 +151,9 @@
 <h3><a id="A"></a>About</h3>
             
     <p>
-        This semester, we aim to understand and experiment on two closely related aspects of applying topology to deep learning: 
-        (1) topology of artificial neural network (NN) architectures and (2) topological inputs for designing NNs.    
+        This semester, we aim to understand and experiment on two closely related aspects of applying topology to deep learning, 
+        with a continued emphasis on audio and speech signal processing and time series analysis: 
+        (1) topology of artificial neural network (NN) architectures and (2) topological inputs for designing NNs.  
         We meet <b>Thursdays at 2 pm in M4009</b>.
     </p>
 
