--- a/acts/index.html
+++ b/acts/index.html
@@ -151,9 +151,9 @@
 <h3><a id="A"></a>About</h3>
             
     <p>
-        This semester, we aim to understand and experiment on two closely related aspects of applying topology to deep learning, 
-        with a continued emphasis on audio and speech signal processing and time series analysis: 
+        This semester, we aim to understand and experiment on two closely related aspects of applying topology to deep learning: 
         (1) topology of artificial neural network (NN) architectures and (2) topological inputs for designing NNs.  
+        Among various topics related in a broad context, we place a continued emphasis on audio and speech signal processing and, more generally, time series analysis.  
         We meet <b>Thursdays at 2 pm in M4009</b>.
     </p>
 
