--- a/acts/index.html
+++ b/acts/index.html
@@ -212,6 +212,17 @@
         </div>
     </p>
 
+    <p>
+        Feb 29, '24, 
+        <b>Pingyao Feng</b>, 
+        <a onclick="toggle_visibility('24-2');"><i>How to get a (non-topological) CNN up and running</i></a><br />
+        <div id="24-2" class="toshow" style="display:none">
+            <li>Review what we did for consonant recognition: source of human speech data, TopCap workflow, topological descriptors, etc.</li>
+            
+            <li>How the comparative non-topological machine learning experiment was done: input spectrograms instead of PD/MP.</li>
+        </div>
+    </p>
+
 
 <h3><a id="R"></a>References</h3>
 
@@ -230,6 +241,8 @@
 <li>Laura Alessandretti, Andrea Baronchelli, and Yang-Hui He, <a href="https://www.worldscientific.com/doi/10.1142/9781800613706_0001" target="_blank">Machine learning meets number theory: The data science of Birch–Swinnerton-Dyer</a></li>
 
 <li>Tai-Danae Bradley, Juan Luis Gastaldi, and John Terilla, <a href="https://www.ams.org/journals/notices/202402/rnoti-p174.pdf" target="_blank">The structure of meaning in language: Parallel narratives in linear algebra and category theory</a></li>
+
+<li>Chaolong Ying, Xinjian Zhao, <a href="https://mypage.cuhk.edu.cn/academics/yutianshu/" target="_blank">Tianshu Yu</a>, <a href="https://arxiv.org/abs/2402.16346" target="_blank">Boosting graph pooling with persistent homology</a></li>
 
 <li>Gunnar Carlsson and Mikael Vejdemo-Johansson, <a href="https://mathscinet.ams.org/mathscinet/article?mr=4346385" target="_blank">Topological data analysis with applications</a></li>
 
