--- a/acts/index.html
+++ b/acts/index.html
@@ -223,6 +223,15 @@
         </div>
     </p>
 
+    <p>
+        Mar 7, '24, 
+        <b>Zhiwang Yu</b>, 
+        <a onclick="toggle_visibility('24-3');"><i>How to get a topological CNN up and running</i></a><br />
+        <div id="24-3" class="toshow" style="display:none">
+            <li>Reproducing results from Ephy R. Love, Benjamin Filippenko, Vasileios Maroulas, and Gunnar Carlsson, <a href="https://www.jmlr.org/papers/v24/21-0073.html" target="_blank">Topological convolutional layers for deep learning</a>.</li>
+        </div>
+    </p>
+
 
 <h3><a id="R"></a>References</h3>
 
@@ -236,13 +245,13 @@
 
 <li>Yichen Shen, Nicholas C. Harris, Scott Skirlo et al., <a href="https://www.nature.com/articles/nphoton.2017.93" target="_blank">Deep learning with coherent nanophotonic circuits</a></li>
 
-<li>T. N. Sainath, O. Vinyals, A. Senior and H. Sak, <a href="https://ieeexplore.ieee.org/document/7178838" target="_blank">Convolutional, long short-term memory, fully connected deep neural networks</a></li>
+<li>T. N. Sainath, O. Vinyals, A. Senior, and H. Sak, <a href="https://ieeexplore.ieee.org/document/7178838" target="_blank">Convolutional, long short-term memory, fully connected deep neural networks</a></li>
 
 <li>Laura Alessandretti, Andrea Baronchelli, and Yang-Hui He, <a href="https://www.worldscientific.com/doi/10.1142/9781800613706_0001" target="_blank">Machine learning meets number theory: The data science of Birch–Swinnerton-Dyer</a></li>
 
 <li>Tai-Danae Bradley, Juan Luis Gastaldi, and John Terilla, <a href="https://www.ams.org/journals/notices/202402/rnoti-p174.pdf" target="_blank">The structure of meaning in language: Parallel narratives in linear algebra and category theory</a></li>
 
-<li>Chaolong Ying, Xinjian Zhao, <a href="https://mypage.cuhk.edu.cn/academics/yutianshu/" target="_blank">Tianshu Yu</a>, <a href="https://arxiv.org/abs/2402.16346" target="_blank">Boosting graph pooling with persistent homology</a></li>
+<li>Chaolong Ying, Xinjian Zhao, and <a href="https://mypage.cuhk.edu.cn/academics/yutianshu/" target="_blank">Tianshu Yu</a>, <a href="https://arxiv.org/abs/2402.16346" target="_blank">Boosting graph pooling with persistent homology</a></li>
 
 <li>Gunnar Carlsson and Mikael Vejdemo-Johansson, <a href="https://mathscinet.ams.org/mathscinet/article?mr=4346385" target="_blank">Topological data analysis with applications</a></li>
 
