--- a/grad/index.html
+++ b/grad/index.html
@@ -221,6 +221,26 @@
         </div>
     </p>
 
+    <p>
+        May 21, '23, 
+        <b>Zhou Fang</b>, 
+        <a onclick="toggle_visibility('19');">
+        <i>TBA</i></a><br />
+        <div id="19" class="toshow" style="display:none">
+            
+        </div>
+    </p>
+
+    <p>
+        May 28, '23, 
+        <b>Chenlu Huang</b>, 
+        <a onclick="toggle_visibility('20');">
+        <i>TBA</i></a><br />
+        <div id="20" class="toshow" style="display:none">
+            
+        </div>
+    </p>
+
 
 <h3><a id="23"></a>Talks in Fall 2023 (Tuesdays 4:20 in M4009)</h3>
 
