--- a/acts/index.html
+++ b/acts/index.html
@@ -233,11 +233,27 @@
     </p>
 
     <p>
-        Mar 21, '23, 
+        Mar 14, '24, 
+        <b>No seminar</b>, 
+        <i>Happy $\pi$ Day!</i><br />
+    </p>
+
+    <p>
+        Mar 21, '24, 
         <b>Haiyu Zhang</b>, 
         <a onclick="toggle_visibility('24-4');">
         <i>TBA</i></a><br />
         <div id="24-4" class="toshow" style="display:none">
+            
+        </div>
+    </p>
+
+    <p>
+        Mar 28, '24, 
+        <b>Zeyang Ding</b>, 
+        <a onclick="toggle_visibility('24-5');">
+        <i>TBA</i></a><br />
+        <div id="24-5" class="toshow" style="display:none">
             
         </div>
     </p>
