--- a/acts/index.html
+++ b/acts/index.html
@@ -220,6 +220,8 @@
             <li>Review what we did for consonant recognition: source of human speech data, TopCap workflow, topological descriptors, etc.</li>
             
             <li>How the comparative non-topological machine learning experiment was done: input spectrograms instead of PD/MP.</li>
+
+            <li><a href="24/Feng-20240229.pdf" target="_blank">Slides</li>
         </div>
     </p>
 
