--- a/acts/index.html
+++ b/acts/index.html
@@ -162,9 +162,6 @@
 
     <p>
         Jan 19, '24, 
-        <!--
-        <b>Speaker</b>, 
-        -->
         <a onclick="toggle_visibility('24-1');"><i>Organizational meeting</i></a><br />
         <div id="24-1" class="toshow" style="display:none">
             <ul>
@@ -221,7 +218,7 @@
             
             <li>How the comparative non-topological machine learning experiment was done: input spectrograms instead of PD/MP.</li>
 
-            <li><a href="24/Feng-20240229.pdf" target="_blank">Slides</li>
+            <li><a href="24/Feng-20240229.pdf" target="_blank">Slides</a></li>
         </div>
     </p>
 
@@ -231,6 +228,8 @@
         <a onclick="toggle_visibility('24-3');"><i>How to get a topological CNN up and running</i></a><br />
         <div id="24-3" class="toshow" style="display:none">
             <li>Reproducing results from Ephy R. Love, Benjamin Filippenko, Vasileios Maroulas, and Gunnar Carlsson, <a href="https://www.jmlr.org/papers/v24/21-0073.html" target="_blank">Topological convolutional layers for deep learning</a>.</li>
+        
+            <li><a href="24/Yu-20240307.pdf" target="_blank">Slides</a></li>
         </div>
     </p>
 
