--- a/acts/index.html
+++ b/acts/index.html
@@ -151,10 +151,9 @@
 <h3><a id="A"></a>About</h3>
             
     <p>
-        This semester, we aim to understand and experiment on two closely related aspects of applying topology to deep learning: 
-        (1) topology of artificial neural network (NN) architectures and (2) topological inputs for designing NNs.  
-        Among various topics related in a broad context, we place a continued emphasis on audio and speech signal processing and, more generally, on time series analysis.  
-        We meet <b>Thursdays at 2 pm in M4009</b>.
+        This semester, we aim to understand and experiment on two closely related aspects of applying topology to deep learning: (1) topology of artificial neural network 
+        (NN) architectures and (2) topological inputs for designing NNs.  Among various topics related in a broad context, we place a continued emphasis on audio and speech 
+        signal processing and, more generally, on time series analysis.  We meet <b>Thursdays at 2 pm in M4009</b>.  
     </p>
 
 
@@ -165,11 +164,15 @@
         <a onclick="toggle_visibility('24-1');"><i>Organizational meeting</i></a><br />
         <div id="24-1" class="toshow" style="display:none">
             <ul>
-                <li>Topology of Neural Network architectures: Feedforward NN $\to$ Recurrent NN $\to$ Reservoir Computing ($\to$ Time-Delayed RC) $\to$ 
-                    engineering implementation (photonic circuits?) ... CLDNN?</li>
+                <li>
+                    Topology of Neural Network architectures: Feedforward NN $\to$ Recurrent NN $\to$ Reservoir Computing ($\to$ Time-Delayed RC) $\to$ engineering 
+                    implementation (photonic circuits?) ... CLDNN?  
+                </li>
 
-                <li><a href="24/Zhang-20240119.pdf" target="_blank">Topological inputs for designing NNs</a>: Convolutional NN $\to$ Topological CNN, 
-                    in the sense of Carlsson et al. (from [Carlsson et al. 2008] to [Love et al. 2023])</li>
+                <li>
+                    <a href="24/Zhang-20240119.pdf" target="_blank">Topological inputs for designing NNs</a>: Convolutional NN $\to$ Topological CNN, in the sense of 
+                    Carlsson et al. (from [Carlsson et al. 2008] to [Love et al. 2023]) 
+                </li>
 
                 <li>How are the above two aspects related?</li>
 
@@ -177,11 +180,10 @@
                     <p><a href="24/Feng-20240119.pdf" target="_blank">Report on [Feng et al.]</a> and what's next?</p>
                     
                     <p>
-                        This research drew inspiration from Carlsson and his collaborators' discovery of the Klein-bottle distribution of 
-                        high-contrast, local patches of natural images [Carlsson et al. 2008], as well as their subsequent recent work on 
-                        topological CNNs for learning image and even video data [Love et al. 2023].  By analogy, we aim to understand a 
-                        distribution space for speech data, even a directed graph structure on it modeling the complex network of 
-                        speech-signal sequences for practical purposes such as <a href="https://en.wikipedia.org/wiki/Speaker_diarisation" 
+                        This research drew inspiration from Carlsson and his collaborators' discovery of the Klein-bottle distribution of high-contrast, local patches of 
+                        natural images [Carlsson et al. 2008], as well as their subsequent recent work on topological CNNs for learning image and even video data [Love et 
+                        al. 2023].  By analogy, we aim to understand a distribution space for speech data, even a directed graph structure on it modeling the complex 
+                        network of speech-signal sequences for practical purposes such as <a href="https://en.wikipedia.org/wiki/Speaker_diarisation" 
                         target="_blank">speaker diarisation</a>, and how these topological inputs may enable smarter learning.  
                     </p>
 
@@ -197,8 +199,8 @@
                             <li><a href="https://librosa.org/" target="_blank">librosa</a>: audio and music processing in Python</li>
 
                             <li>
-                                Interpretable design of encoder–decoder bases from <a href="22-23/#M" target="_blank">Dr. Yu's Dec 26, '23 talk</a> on 
-                                generative models for speech processing
+                                Interpretable design of encoder–decoder bases from <a href="22-23/#M" target="_blank">Dr. Yu's Dec 26, '23 talk</a> on generative models for 
+                                speech processing 
                             </li>
                         </ol>
                     </p>
