--- a/acts/index.html
+++ b/acts/index.html
@@ -261,6 +261,20 @@
         </div>
     </p>
 
+    <p>
+        Apr 11, '24, 
+        <b>Qingrui Qu</b>, 
+        <a onclick="toggle_visibility('24-6');">
+        <i>BSD and LLM</i></a><br />
+        <div id="24-6" class="toshow" style="display:none">
+            <li>
+                Discuss <a href="https://www.worldscientific.com/doi/10.1142/9781800613706_0001" target="_blank">Machine learning meets number theory: The data science of 
+                Birch–Swinnerton-Dyer</a> and <a href="https://www.ams.org/journals/notices/202402/rnoti-p174.pdf" target="_blank">The structure of meaning in language: 
+                Parallel narratives in linear algebra and category theory</a>.  
+            </li>
+        </div>
+    </p>
+
 
 <h3><a id="R"></a>References</h3>
 
