--- a/acts/index.html
+++ b/acts/index.html
@@ -275,6 +275,16 @@
         </div>
     </p>
 
+    <p>
+        TBD, '24, 
+        <b>Pingyao Feng</b>, 
+        <a onclick="toggle_visibility('24-7');">
+        <i>Artificial-intelligence-aided academic writing</i></a><br />
+        <div id="24-7" class="toshow" style="display:none">
+            
+        </div>
+    </p>
+
 
 <h3><a id="R"></a>References</h3>
 
