--- a/acts/index.html
+++ b/acts/index.html
@@ -262,6 +262,12 @@
     </p>
 
     <p>
+        Apr 4, '24, 
+        <b>No seminar</b>, 
+        <i>Qingming Festival break</i><br />
+    </p>
+
+    <p>
         Apr 11, '24, 
         <b>Qingrui Qu</b>, 
         <a onclick="toggle_visibility('24-6');">
