--- a/acts/index.html
+++ b/acts/index.html
@@ -271,7 +271,7 @@
         Apr 11, '24, 
         <b>Qingrui Qu</b>, 
         <a onclick="toggle_visibility('24-6');">
-        <i>BSD and LLM</i></a><br />
+        <i>Topological, categorical, statistical, and machine learning methods in computational number theory and natural language processing</i></a><br />
         <div id="24-6" class="toshow" style="display:none">
             <li>
                 Discuss <a href="https://www.worldscientific.com/doi/10.1142/9781800613706_0001" target="_blank">Machine learning meets number theory: The data science of 
@@ -331,8 +331,9 @@
 </li>
 
 <li>
-    Laura Alessandretti, Andrea Baronchelli, and Yang-Hui He, <a href="https://www.worldscientific.com/doi/10.1142/9781800613706_0001" target="_blank">Machine learning 
-    meets number theory: The data science of Birch–Swinnerton-Dyer</a> 
+    Laura Alessandretti, Andrea Baronchelli, and <a href="https://lims.ac.uk/yang-hui-he/" target="_blank">Yang-Hui He</a>, 
+    <a href="https://www.worldscientific.com/doi/10.1142/9781800613706_0001" target="_blank">Machine learning meets number theory: The data science of 
+    Birch–Swinnerton-Dyer</a> 
 </li>
 
 <li>
