--- a/grad/index.html
+++ b/grad/index.html
@@ -165,9 +165,9 @@
         Mar 12, '23, 
         <b>Qingrui Qu</b>, 
         <a onclick="toggle_visibility('13');">
-        <i>TBA</i></a><br />
-        <div id="13" class="toshow" style="display:none">
-            
+        <i>An introduction to singularity theory, Milnor's fibration theorem and Brieskorn's construction of exotic spheres</i></a><br />
+        <div id="14" class="toshow" style="display:none">
+            <li>IThrough this lecture, I will provide an overview of the singularity theory of complex analytic functions and polynomials, appreciating its wide-ranging applications and contributions to various branches of mathematics. I will begin by introducing fundamental concepts and definitions in this field, then proceed to discuss the invariants and classification of simple singular points, highlighting their significance. Furthermore, I will illustrate the intriguing relationship between the ADE classification and other mathematical objects such as finite subgroups of the orthogonal group or the intersection form of a fiber manifold. This connection sheds light on the broader mathematical landscape and enriches our understanding of singularity theory. Moving forward, I will introduce the Milnor fibration of a singular point and describe its topological structure by Morse theory. Finally, I will provide a brief introduction to the groundbreaking work of Milnor and Kervaire on the discovery and classification of exotic diffeomorphism structures on 7-dimensional spheres. Additionally, I will touch upon Brieskorn's explicit construction, which involves a family of polynomial singularities that gives rise to all exotic spheres. This fascinating exploration demonstrates the profound impact of singularity theory in the realm of differential topology.</li>
         </div>
     </p>
 
@@ -262,8 +262,7 @@
         <a onclick="toggle_visibility('11');">
         <i>The motivic Adams spectral sequence</i></a><br />
         <div id="11" class="toshow" style="display:none">
-            <li>In this lecture, we briefly introduce some properties and examples of calculations of the motivic Admas spectral sequence and show how to use it to help us 
- compute some differentials in the classical Admas spectral sequence.</li>
+            <li>In this lecture, we briefly introduce some properties and examples of calculations of the motivic Admas spectral sequence and show how to use it to help us compute some differentials in the classical Admas spectral sequence.</li>
             <li><a href="23fal/1107-Wu.pdf" target="_blank">Slides</a></li>
         </div>
     </p>
