--- a/grad/index.html
+++ b/grad/index.html
@@ -162,7 +162,7 @@
 <h3>Talks in Spring 2024 (Tuesdays 4:20 in M5024)</h3>
 
     <p>
-        Mar 12, '23, 
+        Mar 12, '24, 
         <b>Qingrui Qu</b>, 
         <a onclick="toggle_visibility('13');">
         <i>An introduction to singularity theory, Milnor's fibration theorem and Brieskorn's construction of exotic spheres</i></a><br />
@@ -172,7 +172,7 @@
     </p>
 
     <p>
-        Mar 19, '23, 
+        Mar 19, '24, 
         <b>Jiacheng Liang</b>, 
         <a onclick="toggle_visibility('14');">
         <i>TBA</i></a><br />
@@ -182,7 +182,7 @@
     </p>
 
     <p>
-        Mar 26, '23, 
+        Mar 26, '24, 
         <b>Yunsheng Li</b>, 
         <a onclick="toggle_visibility('15');">
         <i>Teichmüller TQFTs and quantum modular forms</i></a><br />
@@ -192,8 +192,8 @@
     </p>
 
     <p>
-        April 30, '23, 
-        <b>Yunhao Sun</b>, 
+        Apr 2, '24, 
+        <b>Qingrui Qu</b>, 
         <a onclick="toggle_visibility('16');">
         <i>TBA</i></a><br />
         <div id="16" class="toshow" style="display:none">
@@ -202,8 +202,8 @@
     </p>
 
     <p>
-        May 7, '23, 
-        <b>Wenhui Yang</b>, 
+        Apr 30, '24, 
+        <b>Yunhao Sun</b>, 
         <a onclick="toggle_visibility('17');">
         <i>TBA</i></a><br />
         <div id="17" class="toshow" style="display:none">
@@ -212,8 +212,8 @@
     </p>
 
     <p>
-        May 14, '23, 
-        <b>Peng Huang</b>, 
+        May 7, '24, 
+        <b>Wenhui Yang</b>, 
         <a onclick="toggle_visibility('18');">
         <i>TBA</i></a><br />
         <div id="18" class="toshow" style="display:none">
@@ -222,8 +222,8 @@
     </p>
 
     <p>
-        May 21, '23, 
-        <b>Zhou Fang</b>, 
+        May 14, '24, 
+        <b>Peng Huang</b>, 
         <a onclick="toggle_visibility('19');">
         <i>TBA</i></a><br />
         <div id="19" class="toshow" style="display:none">
@@ -232,11 +232,21 @@
     </p>
 
     <p>
-        May 28, '23, 
-        <b>Chenlu Huang</b>, 
+        May 21, '24, 
+        <b>Zhou Fang</b>, 
         <a onclick="toggle_visibility('20');">
         <i>TBA</i></a><br />
         <div id="20" class="toshow" style="display:none">
+            
+        </div>
+    </p>
+
+    <p>
+        May 28, '24, 
+        <b>Chenlu Huang</b>, 
+        <a onclick="toggle_visibility('21');">
+        <i>TBA</i></a><br />
+        <div id="21" class="toshow" style="display:none">
             
         </div>
     </p>
