--- a/grad/index.html
+++ b/grad/index.html
@@ -202,8 +202,8 @@
     </p>
 
     <p>
-        Apr 30, '24, 
-        <b>Yunhao Sun</b>, 
+        Apr 23, '24, 
+        <b>Ni An</b>, 
         <a onclick="toggle_visibility('17');">
         <i>TBA</i></a><br />
         <div id="17" class="toshow" style="display:none">
@@ -212,8 +212,8 @@
     </p>
 
     <p>
-        May 7, '24, 
-        <b>Wenhui Yang</b>, 
+        Apr 30, '24, 
+        <b>Yunhao Sun</b>, 
         <a onclick="toggle_visibility('18');">
         <i>TBA</i></a><br />
         <div id="18" class="toshow" style="display:none">
@@ -222,8 +222,8 @@
     </p>
 
     <p>
-        May 14, '24, 
-        <b>Peng Huang</b>, 
+        May 7, '24, 
+        <b>Wenhui Yang</b>, 
         <a onclick="toggle_visibility('19');">
         <i>TBA</i></a><br />
         <div id="19" class="toshow" style="display:none">
@@ -232,8 +232,8 @@
     </p>
 
     <p>
-        May 21, '24, 
-        <b>Zhou Fang</b>, 
+        May 14, '24, 
+        <b>Peng Huang</b>, 
         <a onclick="toggle_visibility('20');">
         <i>TBA</i></a><br />
         <div id="20" class="toshow" style="display:none">
@@ -242,11 +242,21 @@
     </p>
 
     <p>
-        May 28, '24, 
-        <b>Chenlu Huang</b>, 
+        May 21, '24, 
+        <b>Zhou Fang</b>, 
         <a onclick="toggle_visibility('21');">
         <i>TBA</i></a><br />
         <div id="21" class="toshow" style="display:none">
+            
+        </div>
+    </p>
+
+    <p>
+        May 28, '24, 
+        <b>Chenlu Huang</b>, 
+        <a onclick="toggle_visibility('22');">
+        <i>TBA</i></a><br />
+        <div id="22" class="toshow" style="display:none">
             
         </div>
     </p>
