--- a/grad/index.html
+++ b/grad/index.html
@@ -175,7 +175,7 @@
         Mar 19, '24, 
         <b>Jiacheng Liang</b>, 
         <a onclick="toggle_visibility('14');">
-        <i>TBA</i></a><br />
+        <i>Barr-Beck Theorem, Morita theory and Brauer groups in $\infty$-categories</i></a><br />
         <div id="14" class="toshow" style="display:none">
             
         </div>
