--- a/grad/index.html
+++ b/grad/index.html
@@ -185,9 +185,12 @@
         Mar 26, '24, 
         <b>Yunsheng Li</b>, 
         <a onclick="toggle_visibility('15');">
-        <i>Teichmüller TQFTs and quantum modular forms</i></a><br />
+        <i>The Teichmüller TQFT and the Quantum Modularity Conjecture</i></a><br />
         <div id="15" class="toshow" style="display:none">
-            
+            The Quantum Modularity Conjecture is a refined form of the Volume Conjecture, one of the main problems of quantum topology.  
+            In recent studies, it is discovered that the Quantum Modularity Conjecture enjoys rich connections to the Teichmüller TQFT, 
+            a TQFT promoted from the quantum Teichmüller theory.  In this talk, I will briefly introduce the construction of 
+            Teichmüller TQFT and its connections to the Quantum Modularity Conjecture.
         </div>
     </p>
 
