--- a/grad/index.html
+++ b/grad/index.html
@@ -167,7 +167,19 @@
         <a onclick="toggle_visibility('13');">
         <i>An introduction to singularity theory, Milnor's fibration theorem and Brieskorn's construction of exotic spheres</i></a><br />
         <div id="13" class="toshow" style="display:none">
-            <li>Through this lecture, I will provide an overview of the singularity theory of complex analytic functions and polynomials, appreciating its wide-ranging applications and contributions to various branches of mathematics. I will begin by introducing fundamental concepts and definitions in this field, then proceed to discuss the invariants and classification of simple singular points, highlighting their significance. Furthermore, I will illustrate the intriguing relationship between the ADE classification and other mathematical objects such as finite subgroups of the orthogonal group or the intersection form of a fiber manifold. This connection sheds light on the broader mathematical landscape and enriches our understanding of singularity theory. Moving forward, I will introduce the Milnor fibration of a singular point and describe its topological structure by Morse theory. Finally, I will provide a brief introduction to the groundbreaking work of Milnor and Kervaire on the discovery and classification of exotic diffeomorphism structures on 7-dimensional spheres. Additionally, I will touch upon Brieskorn's explicit construction, which involves a family of polynomial singularities that gives rise to all exotic spheres. This fascinating exploration demonstrates the profound impact of singularity theory in the realm of differential topology.</li>
+            <li>
+                Through this lecture, I will provide an overview of the singularity theory of complex analytic functions and polynomials, 
+                appreciating its wide-ranging applications and contributions to various branches of mathematics. I will begin by introducing 
+                fundamental concepts and definitions in this field, then proceed to discuss the invariants and classification of simple singular points, 
+                highlighting their significance. Furthermore, I will illustrate the intriguing relationship between the ADE classification and 
+                other mathematical objects such as finite subgroups of the orthogonal group or the intersection form of a fiber manifold. 
+                This connection sheds light on the broader mathematical landscape and enriches our understanding of singularity theory. 
+                Moving forward, I will introduce the Milnor fibration of a singular point and describe its topological structure by Morse theory. 
+                Finally, I will provide a brief introduction to the groundbreaking work of Milnor and Kervaire on the discovery and 
+                classification of exotic diffeomorphism structures on 7-dimensional spheres. Additionally, I will touch upon Brieskorn's 
+                explicit construction, which involves a family of polynomial singularities that gives rise to all exotic spheres. 
+                This fascinating exploration demonstrates the profound impact of singularity theory in the realm of differential topology.
+            </li>
         </div>
     </p>
 
@@ -187,10 +199,12 @@
         <a onclick="toggle_visibility('15');">
         <i>The Teichmüller TQFT and the Quantum Modularity Conjecture</i></a><br />
         <div id="15" class="toshow" style="display:none">
-            The Quantum Modularity Conjecture is a refined form of the Volume Conjecture, one of the main problems of quantum topology.  
-            In recent studies, it is discovered that the Quantum Modularity Conjecture enjoys rich connections to the Teichmüller TQFT, 
-            a TQFT promoted from the quantum Teichmüller theory.  In this talk, I will briefly introduce the construction of 
-            Teichmüller TQFT and its connections to the Quantum Modularity Conjecture.
+            <li>
+                The Quantum Modularity Conjecture is a refined form of the Volume Conjecture, one of the main problems of quantum topology.  
+                In recent studies, it is discovered that the Quantum Modularity Conjecture enjoys rich connections to the Teichmüller TQFT, 
+                a TQFT promoted from the quantum Teichmüller theory.  In this talk, I will briefly introduce the construction of 
+                Teichmüller TQFT and its connections to the Quantum Modularity Conjecture.
+            </li>
         </div>
     </p>
 
