--- a/grad/index.html
+++ b/grad/index.html
@@ -189,7 +189,7 @@
         <a onclick="toggle_visibility('14');">
         <i>Barr-Beck Theorem, Morita theory and Brauer groups in $\infty$-categories</i></a><br />
         <div id="14" class="toshow" style="display:none">
-            
+            <li><a href="24spr/0319-liang.pdf" target="_blank">Slides</a></li>
         </div>
     </p>
 
