--- a/grad/index.html
+++ b/grad/index.html
@@ -189,6 +189,9 @@
         <a onclick="toggle_visibility('14');">
         <i>Barr-Beck Theorem, Morita theory and Brauer groups in $\infty$-categories</i></a><br />
         <div id="14" class="toshow" style="display:none">
+            <li>
+                In this report, we introduce the $\infty$-category versions of the Barr-Beck Theorem, Morita theory and Brauer groups as well as show some applications of them as examples.
+            </li>
             <li><a href="24spr/0319-liang.pdf" target="_blank">Slides</a></li>
         </div>
     </p>
