--- a/acts/index.html
+++ b/acts/index.html
@@ -248,6 +248,8 @@
         <i>How to capture the topology of a CNN over the course of training</i></a><br />
         <div id="24-4" class="toshow" style="display:none">
             <li>Reproduce results from <a href="https://arxiv.org/abs/1810.03234" target="_blank">Exposition and interpretation of the topology of neural networks</a>.</li>
+        
+            <li><a href="24/Zhang-20240321.pdf" target="_blank">Slides</a></li>
         </div>
     </p>
 
