--- a/grad/index.html
+++ b/grad/index.html
@@ -192,7 +192,8 @@
             <li>
                 In this report, we introduce the $\infty$-category versions of the Barr-Beck Theorem, Morita theory and Brauer groups as well as show some applications of them as examples.
             </li>
-            <li><a href="24spr/0319-liang.pdf" target="_blank">Slides</a></li>
+            
+            <li><a href="24spr/0319-Liang.pdf" target="_blank">Slides</a></li>
         </div>
     </p>
 
