--- a/grad/index.html
+++ b/grad/index.html
@@ -190,7 +190,7 @@
         <i>Barr-Beck Theorem, Morita theory and Brauer groups in $\infty$-categories</i></a><br />
         <div id="14" class="toshow" style="display:none">
             <li>
-                In this report, we introduce the $\infty$-category versions of the Barr-Beck Theorem, Morita theory and Brauer groups as well as show some applications of them as examples.
+                In this talk, we will introduce the $\infty$-categorical version of the Barr-Beck theorem, Morita theory and Brauer groups.  And we will see that the Brauer group Br(S) of the sphere spectrum is zero by a spectral sequence using etale cohomology from Antieau–Gepner's work in 2012.
             </li>
             
             <li><a href="24spr/0319-Liang.pdf" target="_blank">Slides</a></li>
