--- a/grad/index.html
+++ b/grad/index.html
@@ -223,8 +223,8 @@
     </p>
 
     <p>
-        Apr 23, '24, 
-        <b>Ni An</b>, 
+        Apr 9, '24, 
+        <b>Yifan Wu</b>, 
         <a onclick="toggle_visibility('17');">
         <i>TBA</i></a><br />
         <div id="17" class="toshow" style="display:none">
@@ -233,8 +233,8 @@
     </p>
 
     <p>
-        Apr 30, '24, 
-        <b>Yunhao Sun</b>, 
+        Apr 23, '24, 
+        <b>Ni An</b>, 
         <a onclick="toggle_visibility('18');">
         <i>TBA</i></a><br />
         <div id="18" class="toshow" style="display:none">
@@ -243,8 +243,8 @@
     </p>
 
     <p>
-        May 7, '24, 
-        <b>Wenhui Yang</b>, 
+        Apr 30, '24, 
+        <b>Yunhao Sun</b>, 
         <a onclick="toggle_visibility('19');">
         <i>TBA</i></a><br />
         <div id="19" class="toshow" style="display:none">
@@ -253,8 +253,8 @@
     </p>
 
     <p>
-        May 14, '24, 
-        <b>Peng Huang</b>, 
+        May 7, '24, 
+        <b>Wenhui Yang</b>, 
         <a onclick="toggle_visibility('20');">
         <i>TBA</i></a><br />
         <div id="20" class="toshow" style="display:none">
@@ -263,8 +263,8 @@
     </p>
 
     <p>
-        May 21, '24, 
-        <b>Zhou Fang</b>, 
+        May 14, '24, 
+        <b>Peng Huang</b>, 
         <a onclick="toggle_visibility('21');">
         <i>TBA</i></a><br />
         <div id="21" class="toshow" style="display:none">
@@ -273,11 +273,21 @@
     </p>
 
     <p>
-        May 28, '24, 
-        <b>Chenlu Huang</b>, 
+        May 21, '24, 
+        <b>Zhou Fang</b>, 
         <a onclick="toggle_visibility('22');">
         <i>TBA</i></a><br />
         <div id="22" class="toshow" style="display:none">
+            
+        </div>
+    </p>
+
+    <p>
+        May 28, '24, 
+        <b>Chenlu Huang</b>, 
+        <a onclick="toggle_visibility('23');">
+        <i>TBA</i></a><br />
+        <div id="23" class="toshow" style="display:none">
             
         </div>
     </p>
